common模块初始化